# ticktock

./: .firebaserc  .gitignore  CLAUDE.md  README.md  firebase.json  package-lock.json  package.json  release.ps1  seed-phase2.sql
agent/: package.json  tsconfig.json  vite.config.ts
agent/scripts/: kill-stale-dev.mjs  make-source-icon.mjs  sign-and-build.ps1
agent/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
agent/src-tauri/icons/: README.md  icon.icns
agent/src-tauri/src/: admin.rs  child_ctl.rs  commands.rs  config.rs  current_user.rs  firebase.rs  lib.rs  main.rs  pairing.rs  schedule.rs  service.rs  service_updater.rs  spawner.rs  storage.rs  updater.rs  usage.rs  users.rs
agent/src-tauri/src/lock/: mod.rs  overlay.rs  pin.rs  setup_window.rs  system.rs  timer.rs
agent/ui/: index.html
agent/ui/src/: App.tsx  styles.css
agent/ui/src/admin/: AdminSetup.tsx
agent/ui/src/overlay/: Overlay.tsx
agent/ui/src/timer/: Timer.tsx
docs/: auto-update.md  firebase-setup.md  getting-started.md  mobile-deploy.md
functions/: package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
mobile/: App.tsx  app.json  eas.json  metro.config.js  package.json  tsconfig.json
mobile/src/: firebase.ts  navigation.ts
mobile/src/screens/: ControlScreen.tsx  DevicesScreen.tsx  LoginScreen.tsx  PairingScreen.tsx  ScheduleScreen.tsx  UsageScreen.tsx
shared/: package.json  tsconfig.json
shared/src/: index.ts  paths.ts  types.ts
web/: .dev.vars.example  .gitignore  drizzle.config.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts  wrangler.jsonc
web/migrations/: 0000_initial.sql  0001_managed_users_and_subscriptions.sql  0002_seat_and_commands.sql
web/src/: env.d.ts  middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: env.ts  session.ts
web/src/lib/db/: index.ts
(+51 files in other folders)
