[package]
name = "ticktock-agent"
version = "0.1.12"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ticktock_agent"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

# Firebase RTDB: REST + SSE streaming
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"], default-features = false }
eventsource-client = "0.13"
futures = "0.3"

# Signature verification for service-side auto-updates (same .sig format as
# tauri-plugin-updater produces; same pubkey as in tauri.conf.json).
minisign-verify = "0.2"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# PIN hashing
argon2 = "0.5"
rand = "0.8"

# Windows APIs
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_System_Environment",
    "Win32_System_RemoteDesktop",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Shutdown",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

